fixed hover options getting cut off

--- a/src/public/scss/components/_hover-options.scss
+++ b/src/public/scss/components/_hover-options.scss
@@ -14,7 +14,7 @@
     @include displayFlex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    // justify-content: center;
     width: 100%;
     height: 100%;
     padding: 0 .2*$em;
